updated the html files with header text

--- a/deployment/git/templates/getempoutput.html
+++ b/deployment/git/templates/getempoutput.html
@@ -5,6 +5,7 @@
 </head>
 <center>
     <font color="black" size="5" style="font-family: avenir">
+        <h1>{{header_text}}</h1>
         <h1 style="color: DodgerBlue">Employee Information</h1>
         <body style="background: url('{{ background_image }}'); background-size: cover;">
             <form>
