--- a/deployment/git/templates/addemp.html
+++ b/deployment/git/templates/addemp.html
@@ -5,6 +5,7 @@
 </head>
 <center>
     <font color="black" size="4" style="font-family: avenir">
+        <h1>{{header_text}}</h1>
         <h1 style="color: DodgerBlue">Employee Database</h1>
         <body style="background: url('{{ background_image }}'); background-size: cover;">
             <form action="/addemp" autocomplete="on" method="POST" enctype="multipart/form-data">
