--- a/deployment/git/templates/addempoutput.html
+++ b/deployment/git/templates/addempoutput.html
@@ -4,6 +4,7 @@
 <center>
     <font color="DodgerBlue" size="5" style="font-family: avenir">
         <body style="background: url('{{ background_image }}'); background-size: cover;">
+            <h1>{{header_text}}</h1>
             <h1>The employee {{ name }} was successfully added to the database</h1><br>
             <h2>The Employee has been added to the database</h2><br>
             <h2>{{ name }}</h2><br>
