--- a/deployment/git/templates/about.html
+++ b/deployment/git/templates/about.html
@@ -5,7 +5,7 @@
 {% if name %}
   <h1>Hello from {{ name }}!</h1>
 {% else %}
-  <h1>{header_text}}</h1>
+  <h1>{{header_text}}</h1>
   <h1>Hello From CLO835!</h1>
 {% endif %}
   {% if contents %}
